# mailerlite-python

./: .envrc  .gitignore  .pre-commit-config.yaml  Readme.md  pyproject.toml  setup.py  test-requirements.txt
.github/workflows/: main.yml  publish.yml
mailerlite/: __init__.py  api_client.py
mailerlite/sdk/: automations.py  campaigns.py  fields.py  forms.py  groups.py  lib.py  segments.py  subscribers.py  webhooks.py
tests/: automations_test.py  campaigns_test.py  fields_test.py  forms_test.py  groups_test.py  segments_test.py  subscribers_test.py  webhooks_test.py
tests/vcr_cassettes/: automations-activity.yml  automations-get.yml  automations-list.yml  batches-request.yml  campaign-activity.yml  campaign-cancel.yml  campaign-create.yml  campaign-delete.yml  campaign-get.yml  campaign-languages.yml  campaign-list.yml  campaign-schedule.yml  campaign-update.yml  fields-create.yml  fields-delete.yml  fields-list.yml  fields-update.yml  forms-get-subscribers.yml  forms-get.yml  forms-list.yml  forms-update.yml  groups-create.yml  groups-delete.yml  groups-get-subscribers-in-group.yml  groups-import-subscribers.yml  groups-list.yml  groups-update.yml  segments-get-subscribers.yml  segments-get.yml  segments-list.yml  segments-update.yml  subscribers-assign-subscriber-to-group.yml  subscribers-count.yml  subscribers-create.yml  subscribers-delete.yml  subscribers-forget.yml  subscribers-get-email.yml  subscribers-get-id.yml  subscribers-get-import.yml  subscribers-list.yml  (+8 more)
