[project]
name = "mailerlite"
version = "0.1.11"
description = "The official MailerLite Python SDK"
authors = [{name = "MailerLite", email = "tech@mailerlite.com"}]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.1",
]

[dependency-groups]
dev = [
    "coverage>=6.5.0",
    "pytest>=9.0.0",
    "pytest-mock>=3.10.0",
    "python-dotenv>=0.21.0",
    "python-semantic-release>=7.32.2",
    "ruff>=0.1.0",
    "vcrpy>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mailerlite"]

[tool.semantic_release]
branch = "main"
build_command = "pip install uv && uv build"
upload_to_pypi = false
upload_to_release = true
version_variable = "setup.py:__version__"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
